--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@hookform/resolvers": "^2.9.6",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
     "next": "12.2.3",
+    "ramda": "^0.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.33.1"
+    "react-hook-form": "^7.33.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "8.20.0",
