--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@hookform/resolvers": "^2.9.6",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
+    "express": "^4.18.1",
+    "http-proxy-middleware": "^2.0.6",
     "next": "12.2.3",
     "ramda": "^0.28.0",
     "react": "18.2.0",
