--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.9.1",
     "express": "^4.18.1",
     "http-proxy-middleware": "^2.0.6",
+    "nanoid": "^4.0.0",
     "next": "12.2.3",
     "ramda": "^0.28.0",
     "react": "18.2.0",
