--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "esm": "^3.2.25",
     "express": "^4.18.1",
     "http-proxy-middleware": "^2.0.6",
+    "image-size": "^1.0.2",
     "nanoid": "^4.0.0",
     "next": "12.2.3",
     "ramda": "^0.28.0",
