--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "daemon": "DISCOART_OUTPUT_DIR=/workspace/out node -r esm ./daemon/index.js"
+    "daemon": " DISCOART_OUTPUT_DIR=/workspace/out pm2 start node -r esm ./daemon/index.js"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -26,6 +26,7 @@
     "image-size": "^1.0.2",
     "nanoid": "^4.0.0",
     "next": "12.2.3",
+    "pm2": "^5.2.0",
     "ramda": "^0.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -35,6 +36,7 @@
     "sql-template-strings": "^2.2.2",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.0.10",
+    "swr": "^1.3.0",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
   },
