--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 8888",
     "lint": "next lint",
-    "daemon": " DISCOART_OUTPUT_DIR=/workspace/out pm2 start node -r esm ./daemon/index.js"
+    "daemon": "DISCOART_OUTPUT_DIR=/workspace/out node -r esm ./daemon/index.js"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -18,22 +18,18 @@
     "@mui/material": "^5.9.1",
     "archiver": "^5.3.1",
     "axios": "^0.27.2",
-    "axios-hooks": "^3.1.4",
     "date-fns": "^2.29.1",
     "esm": "^3.2.25",
     "express": "^4.18.1",
-    "http-proxy-middleware": "^2.0.6",
     "image-size": "^1.0.2",
     "nanoid": "^4.0.0",
     "next": "12.2.3",
-    "pm2": "^5.2.0",
     "ramda": "^0.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
     "react-json-view": "^1.21.3",
     "read-last-lines": "^1.8.0",
-    "sql-template-strings": "^2.2.2",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.0.10",
     "swr": "^1.3.0",
