move daemon into nextjs

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
       "baseUrl": ".",
       "paths": {
+        "@root/*":["/src/*"],
         "@components/*": ["src/components/*"],
         "@utils/*": ["src/utils/*"],
         "@hooks/*": ["src/hooks/*"]
