--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sqlite": "^4.1.2",
     "sqlite3": "^5.0.10",
     "swr": "^1.3.0",
+    "yaml": "^2.1.1",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
   },
