--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "date-fns": "^2.29.1",
     "esm": "^3.2.25",
     "express": "^4.18.1",
+    "formidable": "^2.0.1",
     "image-size": "^1.0.2",
     "nanoid": "^4.0.0",
     "next": "12.2.3",
     "ramda": "^0.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.2",
     "react-hook-form": "^7.33.1",
     "react-json-view": "^1.21.3",
     "read-last-lines": "^1.8.0",
