--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "DISCOART_OUTPUT_DIR=/workspace/out node -r esm src/daemon/index.js & next dev -p 3000",
     "build": "next build",
-    "start": "DISCOART_OUTPUT_DIR=/workspace/out node -r esm src/daemon/index.js &; next start -p 3000 &",
+    "start": "DISCOART_OUTPUT_DIR=/workspace/out node -r esm src/daemon/index.js & next start -p 3000 &",
     "lint": "next lint"
   },
   "dependencies": {
