--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-json-view": "^1.21.3",
     "react-responsive-carousel": "^3.2.23",
     "read-last-lines": "^1.8.0",
+    "sharp": "^0.30.7",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.0.10",
     "swr": "^1.3.0",
