define specific swr version

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "sharp": "^0.30.7",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.0.10",
-    "swr": "^2.0.0",
+    "swr": "2.0.0-beta.6",
     "yaml": "^2.1.1",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
