--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^5.9.1",
     "archiver": "^5.3.1",
     "axios": "^0.27.2",
+    "cookie-cutter": "^0.2.0",
+    "cookies": "^0.8.0",
     "date-fns": "^2.29.1",
     "esm": "^3.2.25",
     "express": "^4.18.1",
