--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@mui/material": "^5.9.1",
     "archiver": "^5.3.1",
     "axios": "^0.27.2",
-    "cookie-cutter": "^0.2.0",
     "cookies": "^0.8.0",
     "date-fns": "^2.29.1",
     "esm": "^3.2.25",
@@ -28,6 +27,7 @@
     "next": "12.2.3",
     "ramda": "^0.28.0",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.2",
     "react-hook-form": "^7.33.1",
