--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sqlite": "^4.1.2",
     "sqlite3": "^5.0.10",
     "swr": "2.0.0-beta.6",
+    "use-global-hook": "^0.3.0",
     "yaml": "^2.1.1",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
