--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "12.2.3",
     "ramda": "^0.28.0",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.2",
