--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "image-size": "^1.0.2",
     "nanoid": "^4.0.0",
     "next": "12.2.3",
+    "node-fetch": "^3.2.10",
     "ramda": "^0.28.0",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.0",
