all download all finals button

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "esm": "^3.2.25",
     "express": "^4.18.1",
     "formidable": "^2.0.1",
+    "glob": "^8.0.3",
     "image-size": "^1.0.2",
     "nanoid": "^4.0.0",
     "next": "12.2.3",
